# android_code

./: MyLog.java  nkd_log_16进制
01.CusView/: settings.gradle
01.CusView/app/: build.gradle
01.CusView/gradle/wrapper/: gradle-wrapper.properties
01.ScreenTools/app/: build.gradle
02.Utils/app/: build.gradle
02.Utils/gradle/wrapper/: gradle-wrapper.properties
03.Banner/: settings.gradle
03.Banner/app/: build.gradle
03.Banner/banner-lib/: build.gradle
03.Banner/gradle/wrapper/: gradle-wrapper.properties
04.PermissionUtils/: README.md
05.bili/ChromeViewTest/: settings.gradle
05.bili/ChromeViewTest/app/: build.gradle
05.bili/P11_LiveData/: settings.gradle
05.bili/P11_LiveData/app/: build.gradle
05.bili/P12_DataBinding/: settings.gradle
05.bili/P12_DataBinding/app/: build.gradle
05.bili/P13/: settings.gradle
05.bili/P13/app/: build.gradle
07.WebView/01.HybirdApp/: settings.gradle
07.WebView/01.HybirdApp/app/: build.gradle
07.WebView/07.WebViewCerVerify/: README.md
07.WebView/07.WebViewCerVerify/app/: build.gradle
07.WebViewDemo/gradle/wrapper/: gradle-wrapper.properties
08.ndk_demo/app/: build.gradle
08.ndk_demo/gradle/wrapper/: gradle-wrapper.properties
09.JniDemo/app/: build.gradle
09.JniDemo/gradle/wrapper/: gradle-wrapper.properties
10.android_openssl/app/: CMakeLists.txt  build.gradle
10.android_openssl/gradle/wrapper/: gradle-wrapper.properties
19.杂乱的代码/DaggerTest/app/: build.gradle
19.杂乱的代码/FragmentTest/app/: build.gradle
19.杂乱的代码/RecyclerViewTest/app/: build.gradle
19.杂乱的代码/RxjJavaTest/app/: build.gradle
19.杂乱的代码/ToastTest/app/: build.gradle
19.杂乱的代码/ViewGroupTest/app/: build.gradle
19.杂乱的代码/baiDuImagePicInterface/: .project  AndroidManifest.xml  build.gradle  import-summary.txt  local.properties
19.杂乱的代码/baiDuImagePicInterface/app/: build.gradle
20.get_red_packet/: 必读！！！.txt
ApplicationInfo/: settings.gradle
ApplicationInfo/app/: build.gradle
ApplicationInfo/app/release/: 模拟器厂商检测.apk
Demo_no_android_x/app/: build.gradle
NDKFile/: settings.gradle
NDKFile/app/: build.gradle
NetworkObverser/app/: build.gradle
Pad/: settings.gradle
Pad/app/: build.gradle
Pad/app/release/: 1.apk  品牌包名检测.apk  平板电脑检测.apk
android_openssl/: gradle.properties
android_openssl/app/: CMakeLists.txt  build.gradle
android_openssl/app/src/androidTest/java/com/example/administrator/oi/: ExampleInstrumentedTest.java
android_openssl/app/src/main/: AndroidManifest.xml
android_openssl/app/src/main/cpp/: native-lib.cpp
android_openssl/app/src/main/res/layout/: activity_main.xml
emulator_detect/: settings.gradle
ndkdemo/app/: build.gradle
openssl_demo/: settings.gradle
openssl_demo/app/: build.gradle
(+354 files in other folders)
